--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <!-- Botão pra ativar a contagem -->
-        <input type="button" value="CONTAR">
+        <input class="btn" type="button" value="CONTAR" onclick="gerarContagem()">
 
         <!-- Resultado -->
         <div class="res">
