--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <!-- Início -->
             <div class="cInicio">
                 <label for="iInicio">Início: </label>
-                <input type="number" id="iInicio">
+                <input type="number" id="iInicio" min="0">
             </div>
 
             <!-- Final -->
             <div class="cFinal">
                 <label for="iFinal">Final: </label>
-                <input type="number" id="iFinal">
+                <input type="number" id="iFinal" min="0">
             </div>
 
             <!-- Incremeto -->
             <div class="cIncre">
                 <label for="iIncre">Incremento: </label>
-                <input type="number" id="iIncre">
+                <input type="number" id="iIncre" min="1">
             </div>
         </div>
 
@@ -53,5 +53,7 @@
     <footer>
         <sup>&copy;</sup>HarllonCS
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
